add uint for stateRead

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.16)
 project(rabbit_qc)
 
 set(CMAKE_CXX_STANDARD 14)
-add_definitions(-DVecopen)
+#add_definitions(-DVecopen)
 #add_definitions(-DVec256)
+#add_definitions(-DUseLong)
 
 aux_source_directory(./src/ DIR_HELLO_SRCS)
 add_executable(rabbit_qc ${DIR_HELLO_SRCS})
